swagger schemas and input filters
