# src/Authorization/src/Schema/UserRoles/UserRoleAssignment.php
@@ -1,24 +1,0 @@
-<?php
-
-namespace Authorization\Schema\UserRoles;
-
-/**
- * @OA\Schema()
- */
-class UserRoleAssignment
-{
-    /**
-     * @var string
-     * @OA\Property(
-     *     format="uuid"
-     * )
-     */
-    public $userId;
-    /**
-     * @var string
-     * @OA\Property(
-     *     format="uuid"
-     * )
-     */
-    public $roleId;
-}
